# Heroes-Bible-Trivia

./: .breakpoints  .gitignore  .replit  README.md  api.py  bot.py  choices.json  commands.json  config.json  config.py  effect_shop.json  facts.json  global_chat.json  heroes.json  main.py  music.py  musicv2.py  prefixes.json  pyproject.toml  questions.json  replit.nix  replit_zip_error_log.txt  save (copy).json  save.json  shop.json  utils.py
assets/: profiles.heroes
cogs/: _admin.py  _ai_images.py  _chat_filter.py  _global_chat.py  _leaderboard.py  _quiz (copy) aug 28.py  _quiz (copy) jul 10.py  cmds.py  economy.py  effects.py  events.py  facts.py  give.py  help.py  leaderboard.py  meme.py  music.py  profile.py  quiz.py  quiz_bot.py  sell.py  shop.py  slash.py  test.py  use.py  verse.py
database/: config.json  quiz.json
templates/: index.html
