[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
PyNaCl = "^1.5.0"
async-timeout = "^4.0.2"
Flask = "^2.1.2"
requests = "^2.27.1"
youtube_dl = "^2021.12.17"
ffmpeg = "^1.4"
replit = "^3.2.4"
aiohttp = "^3.8.1"
Cython = "^0.29.30"
"craiyon.py" = "^0.1.0"
dismusic = "^1.2.1"
nextcord = "^2.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"